# uncensorbench

./: .gitignore  LICENSE  README.md  main.py  prompts.json  pyproject.toml  test_prompts_10.json  topics.json  validate_prompts_7_10.py
examples/notebooks/: all_responses_with_labels.csv  compare_evaluators_abliterated_heretic.ipynb  compare_evaluators_gpt_oss_20b_heretic.ipynb  compare_evaluators_small_llama.ipynb  compare_with_heretic.ipynb  establish_baseline.ipynb  generate_heretic_20b_responses.py
examples/notebooks/meta-llama_Llama-3.2-1B-Instruct_data/: evaluator_results.csv  labels.json  responses.json  responses_for_labeling.json
examples/notebooks/p-e-w_Qwen3-4B-Instruct-2507-heretic_data/: evaluator_results.csv  labels.json  responses.json  responses_for_labeling.json
examples/notebooks/p-e-w_gpt-oss-20b-heretic_data/: evaluator_results.csv  labels.json  loglikelihood_results.json  responses.json  responses_for_labeling.json
leaderboard/: Dockerfile  README.md  app.py  leaderboard.csv  requirements.txt
prompt_build/: academic_dishonesty.json  adult_content.json  build_entries.py  controversial_speech.json  cybersecurity.json  drugs.json  evasion.json  fraud.json  gambling.json  illegal_activities.json  manipulation.json  new_test_entries.txt  piracy.json  privacy_invasion.json  self_harm.json  violence.json  weapons.json
prompt_build/codes/: code_004.py  code_005.py  code_006.py
prompt_build/platform_attack/: code_discord.py  test_discord.py
prompt_build/tests/: hardened_003.py  hardened_007.py  hardened_008.py  orig_001.py  orig_002.py  orig_004.py  orig_005.py  orig_006.py  orig_009.py  orig_010.py  test_004.py  test_005.py  test_006.py
responses/: llama-3.2-1b-instruct-none.json
tools/: compare_evaluators.py  generate_responses.py  labeling_tool.py  labeling_web.py
uncensorbench/: __init__.py  benchmark.py  cli.py  code_execution.py  evaluator.py  leaderboard.py
uncensorbench/data/: prompts.json  topics.json
